--- a/1511.01069/cqm11.tex
+++ b/1511.01069/cqm11.tex
@@ -330,14 +330,14 @@ The big problem of QM is the tension between the QM state \eqref{gyy} and the ob
 It is impossible to review all the different approaches that have been taken to this problem; however, the
 following are three representative ways of viewing what is happening:
 
-\vspace{0.5cm}
-{\bf (1)} The final state $\ket{\Psi(T)}$ describes two branches of reality that co-exist equally in the Hilbert space of the system corresponding to $\ket{M_1}\otimes\ket{h}$ {\it and\/} $\ket{M_2}\otimes\ket{v}$. Within each branch it appears, subjectively, as if that branch is realized with the appropriate probability $|c_i|^2$.
+\begin{enumerate}
+\item[(1)] The final state $\ket{\Psi(T)}$ describes two branches of reality that co-exist equally in the Hilbert space of the system corresponding to $\ket{M_1}\otimes\ket{h}$ {\it and\/} $\ket{M_2}\otimes\ket{v}$. Within each branch it appears, subjectively, as if that branch is realized with the appropriate probability $|c_i|^2$.
 
-{\bf (2)} During a measurement, a special kind of stochastic evolution occurs such that the final state is either $\ket{M_1}\otimes\ket{h}$ {\it or\/} $\ket{M_2}\otimes\ket{v}$ realized with probabilities $|c_1|^2$ and $|c_2|^2$, respectively.
+\item[(2)] During a measurement, a special kind of stochastic evolution occurs such that the final state is either $\ket{M_1}\otimes\ket{h}$ {\it or\/} $\ket{M_2}\otimes\ket{v}$ realized with probabilities $|c_1|^2$ and $|c_2|^2$, respectively.
 
-{\bf(3)} The final state is (in a way to be explained in sect.~\ref{s4}) {\it both\/} $\ket{\Psi(T)}$ and one of the $\ket{M_1}\otimes\ket{h}$ or $\ket{M_2}\otimes\ket{v}$ realized with probabilities $|c_1|^2$ and $|c_2|^2$, respectively.
-
-\vspace{0.5cm}
+\item[(3)] The final state is (in a way to be explained in sect.~\ref{s4}) {\it both\/} $\ket{\Psi(T)}$ and one of $\ket{M_1}\otimes\ket{h}$ or $\ket{M_2}\otimes\ket{v}$ are realized with probabilities $|c_1|^2$ and $|c_2|^2$, respectively.
+\end{enumerate}
+\noindent
 Option (1) above is a caricature of the many worlds interpretation of QM. 
 In this approach, there is only the \SCH equation and so no up-front role for $|c_i|^2$ as probabilities. If the experiment were repeated $N$ times, there would be $2^N$ branches and the number of these branches for which $n$ $h$-polarized photons are recorded is $N!/n!(N-n)!$. The fact that this number bears no relation to $N|c_1|^2$ is a real difficulty.
 It is claimed  \cite{Wallace} (in a way that is not very convincing to the author) that the probabilities $|c_i|^2$ somehow subjectively emerge for observers embedded in the branches. 
