--- a/1302.4228/qm8.tex
+++ b/1302.4228/qm8.tex
@@ -248,7 +248,7 @@
 
 The remarkable thing about questions involving the interpretation of quantum mechanics is that they seem to be irrelevant to the majority of physicists. This is because the seemingly ad-hoc rules of the Copenhagen interpretation as set out in most textbooks appear to be perfectly adequate for relating the rules of the theory to the phenomena that are observed.  
 
-Nevertheless, at some point one wants to know if the Copenhagen interpretation can be derived from more fundamental laws. Given the success of the current state-of-affairs suggests that the new laws must of a minimal sort that do not change the theory in any really fundamental way. In particular, it seems desirable  that the quantum mechanics of an isolated system is described by the Schr\"odinger equation. However, at the same time one wants to understand why measurements on quantum system seem to give rise to distinct outcomes with probabilities that can be extracted in the standard way from the state vector. Basically one wants evolution by the Schr\"odinger equation in certain circumstances and something that appears to be a stochastic process in others. 
+Nevertheless, at some point one wants to know if the Copenhagen interpretation can be derived from more fundamental laws. The success of the current state-of-affairs suggests that the new laws must of a minimal sort that do not change the theory in any really fundamental way. In particular, it seems desirable  that the quantum mechanics of an isolated system is described by the Schr\"odinger equation. However, at the same time one wants to understand why measurements on quantum system seem to give rise to distinct outcomes with probabilities that can be extracted in the standard way from the state vector. Basically one wants evolution by the Schr\"odinger equation in certain circumstances and something that appears to be a stochastic process in others. 
 One way to unify these two different dynamical laws is to associate them to different views of the same system. 
 We use the terminology of Bene \cite{Bene:1997mf}
 and Sudbery \cite{Sud1} and refer to them as the ``external" and ``internal" views, respectively. For us the internal view is associated to a particular sub-system $\BA$ of a system $\BS$ and involves the reduced density matrix:
