--- a/quant-ph-0307235/quant-ph-0307235-psu.tex
+++ b/quant-ph-0307235/quant-ph-0307235-psu.tex
@@ -744,7 +744,7 @@ Murdoch \cite{Murd}).
 
 Indeed, it is consistent with all experimental evidence to assume
 that electrons and neutrons maintain a particle-like behavior
-while passing through the interfero-\linebreak meter. If detectors
+while passing through the interferometer. If detectors
 are placed within the interferometer, the particle is always found
 in {\em one} of the possible paths, never in both paths at the
 same time. Something similar is observed when a photon is allowed
