--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -54,7 +54,7 @@ bookmarksopenlevel=10
 %\usepackage[altbullet]{lucidabr}
 
 \linespread{1.1}
-\usepackage[papersize={7.4in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={7.4in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
