--- a/cond-mat-0408316/Vaxjo04.tex
+++ b/cond-mat-0408316/Vaxjo04.tex
@@ -1,7 +1,50 @@
-\documentclass[aps,prb,floatfix,twocolumn]{revtex4}
+\documentclass[12pt, onecolumn, aps,prb,floatfix]{revtex4-2}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \newcommand{\x}{s}
 \newcommand{\y}{r}
 \newcommand{\vex}{\vec{x}}
@@ -101,7 +144,7 @@
 \title
 {The quantum measurement process in an exactly solvable model}
 \author{Armen E. Allahverdyan$^{1,2)}$, Roger Balian$^{3)}$
-and \underline{Theo M. Nieuwenhuizen}$^{1)}$\footnote{The author who 
+and {Theo M. Nieuwenhuizen}$^{1)}$\footnote{The author who 
 presented this contribution at
 `Foundations of Probability and Physics-3', V\"axj\"o, Sweden,
 June 7-12, 2004}}
