--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -63,11 +63,11 @@ bookmarksopenlevel=10
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 
 % the lucida varphi is hideous
-\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
-\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
+%\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
+%\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
 \input{../helpers/fix-underbrace.tex}
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 
 \usepackage[small]{titlesec}
 \usepackage{amsmath}
