--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -50,7 +50,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.5in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
+\usepackage[papersize={7.6in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
 \usepackage[small]{titlesec}
 \usepackage{amsmath}
 \usepackage{cite}
@@ -1201,6 +1201,7 @@ The quantum measurement problem arises from the acknowledgement
 
 }%EndZeText
 
+\newpage
 \subsubsection{Various approaches}
 \label{section.1.3.1}
 
@@ -2720,6 +2721,7 @@ on the system by its interaction with a measuring apparatus.
 
 }%EndZeText
 
+\newpage
 \subsection{What we learned from these models}
 
 \hfill{\footnote{Fisherman: ``What's the news from the sea?'' Fish: ``I have a lot to say,
