--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -49,7 +49,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={7.6in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
 \usepackage[small]{titlesec}
 \usepackage{amsmath}
@@ -57,6 +57,10 @@ bookmarksopenlevel=10
 
 \sloppy
 \raggedbottom
+
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
 
 %\usepackage[hidelinks]{hyperref}
 %\usepackage{\hyperref}
@@ -2721,7 +2725,6 @@ on the system by its interaction with a measuring apparatus.
 
 }%EndZeText
 
-\newpage
 \subsection{What we learned from these models}
 
 \hfill{\footnote{Fisherman: ``What's the news from the sea?'' Fish: ``I have a lot to say,
