--- a/quant-ph-0608158/LamRipCirResubmission.tex
+++ b/quant-ph-0608158/LamRipCirResubmission.tex
@@ -1,7 +1,47 @@
-\documentclass[aps,prl,twocolumn,superscriptaddress,showpacs,nofootonbib]{revtex4}
+\documentclass[aps,prl,onecolumn,superscriptaddress,showpacs,nofootonbib]{revtex4-2}
 \usepackage{graphicx}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %\newcommand{\ket}[1]{\ensuremath{\left|{#1}\right\rangle}}
 %\newcommand{\bra}[1]{\ensuremath{\left\langle{#1}\right|}}
 %\newcommand{\braket}[1]{\ensuremath{\left\langle{#1}\right\rangle}}
