--- a/gr-qc-9302018/gr-qc-9302018.tex
+++ b/gr-qc-9302018/gr-qc-9302018.tex
@@ -19,6 +19,7 @@
   \parskip   =   0pt
   \parindent =   0pt
 
+\raggedbottom
 
 %\input macros.modified
 % at the moment no trouble with footnotes
@@ -178,7 +179,8 @@
  \LastMac=\Hae
  \Raggedright
  \twelvebf\baselineskip=15pt
- \uppercase{#1}
+ {#1}
+ \medskip\medskip
 }
 
 \def\hb#1\par{% heading B
@@ -187,6 +189,7 @@
  \Raggedright
  \twelvebf\baselineskip=15pt
  #1
+  \medskip\medskip
 }
 
 \def\hc#1{% heading C
@@ -196,6 +199,7 @@
  \twelvepoint\it
  #1\/
  \rm
+  \medskip\medskip
 }
 
 \def\tx{% text
