--- a/2102.05734/QC.tex
+++ b/2102.05734/QC.tex
@@ -1,4 +1,4 @@
-\documentclass[prd,twocolumn,superscriptaddress,nofootinbib,floatfix,amsmath,amssymb]{revtex4-2}
+\documentclass[11pt,prd,onecolumn,superscriptaddress,nofootinbib,floatfix,amsmath,amssymb]{revtex4-2}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 %\usepackage{geometry}
@@ -9,19 +9,51 @@
 \usepackage{graphicx}
 \usepackage{comment}
 \usepackage[usenames,dvipsnames]{xcolor}
-\usepackage{hyperref}
 \usepackage{braket}
 \usepackage{mathtools}
 \usepackage{xcolor}
 \usepackage{enumitem}
-\usepackage{hyperref}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
 \hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,      
-    urlcolor=cyan,
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
 }
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newcommand{\ii}{\mathrm{i}}
 \renewcommand{\a}[1]{\hat{a}_{\bm{#1}}}
@@ -1641,17 +1673,18 @@
     By Wick's theorem, only terms with equal number of annihilation and creation operators can contribute, thus $W_\text{I}^{\phi^2}$ yields the following integral:
     \begin{widetext}
     \begin{align}
-        W_\text{I}^{\phi^2}(\sx,\sx') &= \int \frac{\prod_{j=1}^6\dd^n\bk_j\,f_{\bk_0,\sigma}(\bk_1)f_{\bk_0,\sigma}(\bk_6)}{[2(2\pi)^n)]^2\sqrt{|\bk_2||\bk_3||\bk_4||\bk_5|}} \left[\bra{0}\a{\bk_1}\a{\bk_2}\a{\bk_3}\ad{\bk_4}\ad{\bk_5}\ad{\bk_6}\ket{0}
+        W_\text{I}^{\phi^2}(\sx,\sx') &= \int \frac{\prod_{j=1}^6\dd^n\bk_j\,f_{\bk_0,\sigma}(\bk_1)f_{\bk_0,\sigma}(\bk_6)}{[2(2\pi)^n)]^2\sqrt{|\bk_2||\bk_3||\bk_4||\bk_5|}} \\
+        & \quad \left[\bra{0}\a{\bk_1}\a{\bk_2}\a{\bk_3}\ad{\bk_4}\ad{\bk_5}\ad{\bk_6}\ket{0}
         e^{-\ii k_2^\mu x_\mu -\ii k_3^\mu x_\mu+\ii k_4^\mu x'_\mu+\ii k_5^\mu x'_\mu}\right.\notag\\
-        &\hspace{5.25cm}+\bra{0}\a{\bk_1}\a{\bk_2}\ad{\bk_3}\a{\bk_4}\ad{\bk_5}\ad{\bk_6}\ket{0}
+        &\hspace{1.25cm}+\bra{0}\a{\bk_1}\a{\bk_2}\ad{\bk_3}\a{\bk_4}\ad{\bk_5}\ad{\bk_6}\ket{0}
         e^{-\ii k_2^\mu x_\mu +\ii k_3^\mu x_\mu-\ii k_4^\mu x'_\mu+\ii k_5^\mu x'_\mu}\notag\\
-        &\hspace{5.25cm}+\bra{0}\a{\bk_1}\a{\bk_2}\ad{\bk_3}\ad{\bk_4}\a{\bk_5}\ad{\bk_6}\ket{0}
+        &\hspace{1.25cm}+\bra{0}\a{\bk_1}\a{\bk_2}\ad{\bk_3}\ad{\bk_4}\a{\bk_5}\ad{\bk_6}\ket{0}
         e^{-\ii k_2^\mu x_\mu +\ii k_3^\mu x_\mu+\ii k_4^\mu x'_\mu-\ii k_5^\mu x'_\mu}\notag\\
-        &\hspace{5.25cm}+\bra{0}\a{\bk_1}\ad{\bk_2}\ad{\bk_3}\a{\bk_4}\a{\bk_5}\ad{\bk_6}\ket{0}
+        &\hspace{1.25cm}+\bra{0}\a{\bk_1}\ad{\bk_2}\ad{\bk_3}\a{\bk_4}\a{\bk_5}\ad{\bk_6}\ket{0}
         e^{\ii k_2^\mu x_\mu +\ii k_3^\mu x_\mu-\ii k_4^\mu x'_\mu-\ii k_5^\mu x'_\mu}\notag\\
-        &\hspace{5.25cm}+\bra{0}\a{\bk_1}\ad{\bk_2}\a{\bk_3}\a{\bk_4}\ad{\bk_5}\ad{\bk_6}\ket{0}
+        &\hspace{1.25cm}+\bra{0}\a{\bk_1}\ad{\bk_2}\a{\bk_3}\a{\bk_4}\ad{\bk_5}\ad{\bk_6}\ket{0}
         e^{\ii k_2^\mu x_\mu -\ii k_3^\mu x_\mu-\ii k_4^\mu x'_\mu+\ii k_5^\mu x'_\mu}\notag\\
-        &\left.\hspace{5.25cm}+\bra{0}\a{\bk_1}\ad{\bk_2}\a{\bk_3}\ad{\bk_4}\a{\bk_5}\ad{\bk_6}\ket{0}
+        &\left.\hspace{1.25cm}+\bra{0}\a{\bk_1}\ad{\bk_2}\a{\bk_3}\ad{\bk_4}\a{\bk_5}\ad{\bk_6}\ket{0}
         e^{\ii k_2^\mu x_\mu -\ii k_3^\mu x_\mu+\ii k_4^\mu x'_\mu-\ii k_5^\mu x'_\mu}\right]\,.
         \label{eq: Wightman-quad-oneparticle-unordered}
     \end{align}
@@ -1774,17 +1807,18 @@
     \begin{equation}
         \begin{split}
         W^{\phi^2}_{\ba\bb,\text{I}} &= {\NN^2\!\!}\int\frac{\prod_{j=1}^8\dd^n \bk_j  \,\,f_{1278}^{\ba\bb}}{[2(2\pi)^n]^2\sqrt{|\bk_3||\bk_4||\bk_5||\bk_6|}} %e^{-\epsilon(|\bk_3|+|\bk_4|+|\bk_5|+|\bk_6|)/4} \times\\&\hspace{0.5cm}
-        \left[ 
+        \\ 
+        &\qquad \left[ 
         \braket{0|\a{k_1} \a{k_2} \a{k_3} \a{k_4} \ad{k_5} \ad{k_6}\ad{k_7} \ad{k_8}|0}e^{-\ii k_3^\mu x_\mu}e^{-\ii k_4^\mu x_\mu}e^{\ii k_5^\mu x'_\mu}e^{\ii k_6^\mu x'_\mu} \right. \\
-        &\hspace{5.2cm}+
+        &\hspace{1.2cm}+
         \braket{0|\a{k_1} \a{k_2} \a{k_3} \ad{k_4} \a{k_5} \ad{k_6}\ad{k_7} \ad{k_8}|0}e^{-\ii k_3^\mu x_\mu}e^{\ii k_4^\mu x_\mu}e^{-\ii k_5^\mu x'_\mu}e^{\ii k_6^\mu x'_\mu} \\
-        &\hspace{5.2cm}+
+        &\hspace{1.2cm}+
         \braket{0|\a{k_1} \a{k_2} \a{k_3} \ad{k_4} \ad{k_5} \a{k_6}\ad{k_7} \ad{k_8}|0}e^{-\ii k_3^\mu x_\mu}e^{\ii k_4^\mu x_\mu}e^{\ii k_5^\mu x'_\mu}e^{-\ii k_6^\mu x'_\mu}  \\
-        &\hspace{5.2cm}+
+        &\hspace{1.2cm}+
         \braket{0|\a{k_1} \a{k_2} \ad{k_3} \a{k_4} \a{k_5} \ad{k_6}\ad{k_7} \ad{k_8}|0}e^{\ii k_3^\mu x_\mu}e^{-\ii k_4^\mu x_\mu}e^{-\ii k_5^\mu x'_\mu}e^{\ii k_6^\mu x'_\mu} \\
-        &\hspace{5.2cm}+
+        &\hspace{1.2cm}+
         \braket{0|\a{k_1} \a{k_2} \ad{k_3} \a{k_4} \ad{k_5} \a{k_6}\ad{k_7} \ad{k_8}|0}e^{\ii k_3^\mu x_\mu}e^{-\ii k_4^\mu x_\mu}e^{\ii k_5^\mu x'_\mu}e^{-\ii k_6^\mu x'_\mu} \\
-        &\left.\hspace{5.2cm}+
+        &\left.\hspace{1.2cm}+
         \braket{0|\a{k_1} \a{k_2} \ad{k_3} \ad{k_4} \a{k_5} \a{k_6}\ad{k_7} \ad{k_8}|0}e^{\ii k_3^\mu x_\mu}e^{\ii k_4^\mu x_\mu}e^{-\ii k_5^\mu x'_\mu}e^{-\ii k_6^\mu x'_\mu} \right]\,,
         \end{split}
         \label{eq: Wightman-quad-twoparticle-unordered}
