--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -1,4 +1,24 @@
+\usepackage{amssymb}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -11,19 +31,15 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{amssymb}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-\usepackage[altbullet]{lucidabr}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\sloppy
-\raggedbottom
-\pagestyle{plain}
 
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
-\usepackage{microtype}
