--- a/1106.0280/0-minichapter.tex
+++ b/1106.0280/0-minichapter.tex
@@ -78,7 +78,7 @@ Given two random variables $(X,Y)$ the mutual information $I_{XY}$ is defined as
 \begin{equation}
 I(X,Y)=H(X)+H(Y)-H(X,Y),
 \end{equation}
-where $H(X),H(Y)$ are the marginal Shanon entropies and $H(X,Y)$ the joint entropy defined as
+where $H(X),H(Y)$ are the marginal Shannon entropies and $H(X,Y)$ the joint entropy defined as
 \begin{align}
 H(X,Y)&=-\sum_{x,y}P(x,y)\log_2\left[P(x,y)\right],\\*
 H(X)&=-\sum_{x}P(x)\log_2\left[P(x)\right],\\*
