--- a/1106.0280/TesisEdu.tex
+++ b/1106.0280/TesisEdu.tex
@@ -31,6 +31,15 @@
 \usepackage{textcomp}
 \usepackage{mathrsfs}
 \usepackage{cite}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
@@ -111,14 +120,6 @@ bookmarksopenlevel=10
 \hyphenation{Unruh}
 \hyphenation{Adela}
 
-
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/cmrsum}
-\input{../helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
-\usepackage{microtype}
 
 
 \def\openone{\leavevmode\hbox{\small$1$\normalsize\kern-.37em$1$}}
@@ -204,12 +205,13 @@ bookmarksopenlevel=10
 
 %\include{0c-resumen}
 
+\part*{foo}
 
 \include{0d-publicaciones}
 \include{0d-introduccion}
 
-\addcontentsline{toc}{part}{Preliminaries}
 \part*{Preliminaries}
+\addcontentsline{toc}{part}{Preliminaries}
 
 \include{0-minichapter}
 \include{1-introUnruh}
