--- a/2010.01327/toy10.tex
+++ b/2010.01327/toy10.tex
@@ -1,6 +1,6 @@
-\documentclass[11pt,twoside,A4]{article}
+\documentclass[12pt]{article}
 %\documentclass[landscape,twocolumn,A4]{article}
-\usepackage{times,fancyhdr}
+%\usepackage{times,fancyhdr}
 \usepackage[dvips]{graphicx}
 \usepackage{latexsym}
 \usepackage[affil-it]{authblk}
@@ -11,26 +11,60 @@
 \usepackage{floatrow}
 \usepackage{units}
 \usepackage{setspace}
-\usepackage{hyperref}
 \usepackage[font=small,labelfont=bf]{caption}
 %\usepackage{fullpage}
 %\textwidth 14cm
-\usepackage[top=4cm, bottom=4cm, left=3.5cm, right=3.5cm]{geometry}
 
 %\usepackage{amssymb}
 %\usepackage{amsmath}
 \usepackage{color,graphicx}
 \usepackage{caption}
-\usepackage{times}
 \usepackage{float}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{marginnote}
 
-\pagestyle{fancy}
-\fancyhead[RO,RE]{Local, Deterministic Wave-function Collapse}
-%\fancyhead[CO,CE]{Notes \today}
-\fancyhead[LO,LE]{{\sl Hossenfelder, Donadi}}
-%\fancyfoot[RO, LE] {\thepage}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \def\beq{\begin{equation}}
 \def\eeq{\end{equation}}
