--- a/1205.1439/psionticproof2.tex
+++ b/1205.1439/psionticproof2.tex
@@ -7,7 +7,7 @@
 
 
 
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
 
 \usepackage{amsmath} \usepackage{amssymb} \usepackage{graphics}
 
@@ -18,6 +18,49 @@
 
 \usepackage{tikz} \usetikzlibrary{calc} \usetikzlibrary{arrows}
 
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 %%%%%%% diagram environment  \begin{diagram}[scale] optional argument is scale. Default is 1=0.25cm
 
@@ -84,11 +127,7 @@ value these variables can take represents an \emph{ontic state} (a particular st
 $\lambda$.   If we make three basic assumptions, we can show that the distributions over ontic states corresponding to distinct pure states are non-overlapping.  This means that we can deduce the quantum state from a knowledge of the ontic state. Hence, if these assumptions are correct, we can claim that the quantum state is a real thing (it is written into the underlying variables that describe reality).  The key assumption we use in this proof is \emph{ontic indifference} - that quantum transformations that do not affect a given pure quantum state can be implemented in such a way that they do not affect the ontic states in the support of that state.  In fact this assumption is violated in the Spekkens toy model (which captures many aspects of quantum theory and in which different pure states of the model have overlapping distributions over ontic states).   This paper proves that ontic indifference must be violated in any model reproducing quantum theory in which the quantum state is not a real thing.  The argument presented in this paper is different from that given in a recent paper by Pusey, Barrett, and Rudolph.  It uses a different key assumption and it pertains to a single copy of the system in question.
 \end{abstract}
 
-
-
-
-
-
+\newpage
 
 \section{Introduction} \label{introduction}
 
@@ -137,7 +176,7 @@ in this way restricted ontic indifference is a kind of locality assumption.  Res
 In fact the assumption of ontic indifference (and of restricted ontic indifference) is violated by the Spekkens toy model mentioned above and, even more interestingly, by a particular application of that model due to Elliott Martin and Robert Spekkens (see \cite{spekkens2008why}) which applies to interferometers of the sort that we will consider later.  In the model of Martin and Spekkens there are ontic states associated with a path of an interferometer even when the particle goes along the other path (i.e. it violates (i) from the preceding paragraph).  This can be viewed as taking a field picture of the ontic variables in which the vacuum has non-trivial structure.  The assumption of restricted ontic indifference is not violated in the de Broglie Bohm model for quantum mechanics in which the ontic state is given by $(\psi, {\bf x})$ where $\bf x$ is the actual position, in configuration space, of the particles.  Thus the result of this paper could be read in the following way.  While it is possible to construct $\psi$-ontic models that satisfy the ontic indifference assumption, it is not possible to build $\psi$-epistemic models of this nature.  This, then, could be regarded as strong hint on how to construct of $\psi$-epistemic models.  In particular, it points to a field (rather than a particle) ontology for $\psi$-epistemic models.  
 
 The main proof we will present requires that the Hilbert space associated with the system in question is infinite dimensional.   If this dimension, $N+1$, is finite, then we prove that any
-pair of pure states, $|\varphi\rangle$ and $|\psi\rangle$, for which $\langle \varphi| \psi\rangle|^2 \geq \frac{N-1}{N}$ must have non-overlapping distributions over the ontic states (under the given assumptions).   We
+pair of pure states, $|\varphi\rangle$ and $|\psi\rangle$, for which $\langle \varphi| \psi\rangle^2 \geq \frac{N-1}{N}$ must have non-overlapping distributions over the ontic states (under the given assumptions).   We
 will also discuss the case of a system, $A$, with finite dimensional Hilbert space.  We will show how, by introducing an infinite dimensional ancilla, $B$, in some fixed state, we are able
 to deduce that different pure states for system $A$ must correspond to different ontic states of $AB$.
 
