--- a/1205.1439/psionticproof2.tex
+++ b/1205.1439/psionticproof2.tex
@@ -543,6 +543,8 @@ $\psi$-epistemic models, to Jonathan Barrett for carefully explaining the assump
 
 Research at Perimeter Institute for Theoretical Physics is supported in part by the Government of Canada through NSERC and by the Province of Ontario through MRI.
 
+\raggedright
+
 \bibliography{psionticbib} \bibliographystyle{plain}
 
 \end{document}
