--- a/1205.1439/psionticproof2.tex
+++ b/1205.1439/psionticproof2.tex
@@ -9,8 +9,14 @@
 
 \documentclass[12pt]{article}
 
-\usepackage{amsmath} \usepackage{amssymb} \usepackage{graphics}
-
+\usepackage{amssymb}
+%\usepackage{lmodern}
+\usepackage[lf,semibold]{libertine}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+%\usepackage[varqu,varl]{zi4}
+\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[libertine]{newtxmath}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  package for drawing diagrams%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -20,7 +26,6 @@
 
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
@@ -28,8 +33,8 @@
 \pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/cmrsum}
-\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/cmrsum}
+%\input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
@@ -136,7 +141,7 @@ Ever since the Schroedinger wrote down his wave equation, people have wondered w
 thing.  That is, is there something in the underlying reality of the world that corresponds to the wavefunction?
 
 We start by assuming there is still some underlying reality, described by some variables, $\lambda$.  Sometimes these variables are called \emph{hidden variables}.  This is a little
-inappropriate though since not all the variables have to be \lq\lq hidden" \cite{bell2004speakable}.  Each $\lambda$ describes a possible \emph{ontic state} - a possible state of the
+inappropriate though since not all the variables have to be \lq\lq hidden'' \cite{bell2004speakable}.  Each $\lambda$ describes a possible \emph{ontic state} - a possible state of the
 underlying reality.  When a quantum state is prepared we imagine that it corresponds to a probability distribution over ontic states.  A different quantum state would, in general, correspond
 to a different distribution over ontic states.
 
@@ -172,7 +177,7 @@ such that we have an $N+1$ dimensional Hilbert space (we do not consider any int
 box 0.  Consider further different possible quantum transformations we might perform that leave $|0\rangle$ invariant.  Then restricted ontic indifference asserts that we can find an
 apparatus to implement implement these quantum transformations in such a way that ontic states in the support of $|0\rangle$ are not affected by which quantum transformation we choose to
 implement.  Transformations that leave $|0\rangle$ invariant can all be implemented without actually touching box 0.  Indeed, boxes 1 to $N$ could be at a great distance from box 0.  Viewed
-in this way restricted ontic indifference is a kind of locality assumption.  Restricted ontic indifference would follow if (i) all the ontic variables associated with a localized particle are \lq\lq situated" in the region where that particle is localized, and (ii)these ontic variables are unaffected by transformations that can be implemented without touching this region.
+in this way restricted ontic indifference is a kind of locality assumption.  Restricted ontic indifference would follow if (i) all the ontic variables associated with a localized particle are \lq\lq situated'' in the region where that particle is localized, and (ii)these ontic variables are unaffected by transformations that can be implemented without touching this region.
 
 In fact the assumption of ontic indifference (and of restricted ontic indifference) is violated by the Spekkens toy model mentioned above and, even more interestingly, by a particular application of that model due to Elliott Martin and Robert Spekkens (see \cite{spekkens2008why}) which applies to interferometers of the sort that we will consider later.  In the model of Martin and Spekkens there are ontic states associated with a path of an interferometer even when the particle goes along the other path (i.e. it violates (i) from the preceding paragraph).  This can be viewed as taking a field picture of the ontic variables in which the vacuum has non-trivial structure.  The assumption of restricted ontic indifference is not violated in the de Broglie Bohm model for quantum mechanics in which the ontic state is given by $(\psi, {\bf x})$ where $\bf x$ is the actual position, in configuration space, of the particles.  Thus the result of this paper could be read in the following way.  While it is possible to construct $\psi$-ontic models that satisfy the ontic indifference assumption, it is not possible to build $\psi$-epistemic models of this nature.  This, then, could be regarded as strong hint on how to construct of $\psi$-epistemic models.  In particular, it points to a field (rather than a particle) ontology for $\psi$-epistemic models.  
 
@@ -254,7 +259,7 @@ shifter in place the detector $B_2$ will always fire and there is zero probabili
 Given this set up, one version of the popular argument for something going both ways is the following.  Let us try to account for this experiment in such a way that the particle either goes
 along path $a_0$ or $a_1$.  If this is the case then, sometimes it must go along path $a_0$.  Consider a case in which it does go along path $a_0$.  When the particle reaches \emph{BS2} it
 must go along path $b_1$ if there is no phase shifter and it must go along path $b_2$ if the $\phi=\pi$ phase shifter is in place. Since it did not go along path $a_1$ it does not \lq\lq
-know" whether there is a phase shifter in place or not.  Hence, it cannot make the correct \lq\lq decision".  This shows that something must be going along both paths.  We will now see how
+know'' whether there is a phase shifter in place or not.  Hence, it cannot make the correct \lq\lq decision''.  This shows that something must be going along both paths.  We will now see how
 to turn this argument into a formal argument for the reality of the quantum state.
 
 This example can be used to show that the pair of states
@@ -479,7 +484,7 @@ eigenstate of the acting Hamiltonian and so a measurement onto the energy basis 
 directly measured is quite remarkable.  Fuchs regards the quantum state as a degree of belief by taking a Bayesian interpretation of probabilities \cite{fuchs2010qbism}.  In particular, he
 and collaborators have shown that there can be situations in which it is consistent for different agents to have different beliefs as to what the state of a given system is and yet for them
 all to believe the system is in a pure state \cite{caves2002conditions}.  There is clearly a tension between that result and any proof that the wavefunction is a real thing which would be
-interesting to explore further.  Indeed, one can think of a quantum state as being represented by a list of probabilities (corresponding to a complete set of fiducial measurements).  Then the only difference between two different pure quantum states is that they have different probabilities for these fiducial measurements.  If we adopt the point of view that probabilities are nothing more than degrees of belief then it is clearly possible for two agents to ascribe different pure states to the same situation.  It follows that there is a conflict between this view of probabilities and the three assumptions used in this paper.  Indeed, in the point of view developed by Fuchs \cite{fuchs2010qbism}, the first assumption (that there is a hidden variable $\lambda$ associated with a system) is not true.   Although this assumption was dubbed \lq\lq realism" we should admit that it is particular way of implementing the notion of realism.  We may have models do not deny realism in the broader sense of the word but which are inconsistent with this assumption.
+interesting to explore further.  Indeed, one can think of a quantum state as being represented by a list of probabilities (corresponding to a complete set of fiducial measurements).  Then the only difference between two different pure quantum states is that they have different probabilities for these fiducial measurements.  If we adopt the point of view that probabilities are nothing more than degrees of belief then it is clearly possible for two agents to ascribe different pure states to the same situation.  It follows that there is a conflict between this view of probabilities and the three assumptions used in this paper.  Indeed, in the point of view developed by Fuchs \cite{fuchs2010qbism}, the first assumption (that there is a hidden variable $\lambda$ associated with a system) is not true.   Although this assumption was dubbed \lq\lq realism'' we should admit that it is particular way of implementing the notion of realism.  We may have models do not deny realism in the broader sense of the word but which are inconsistent with this assumption.
 
 If we restrict ourselves to the case of a spin half particle then there are two interesting models in the literature. Bell \cite{bell1964on} constructed a simple hidden variable model in
 which distinct pure spin half states correspond to hidden variables represented by distinct unit vectors and the probability of seeing certain outcome is given by the overlap between this
@@ -536,7 +541,7 @@ represents a very different take on the problem of interpretation to the old sch
 \section*{Acknowledgements}
 
 I am especially grateful to Antony Valentini not only for numerous provocative discussions on the issue of reality in quantum theory over the years but also for providing limited funding
-for the present project (\lq\lq As for the \$40 [you owe me], I'll make a deal with you. If you write another paper about hidden variables, I'll write off your debt ...").  I am also
+for the present project (\lq\lq As for the \$40 [you owe me], I'll make a deal with you. If you write another paper about hidden variables, I'll write off your debt ...'').  I am also
 grateful to Roberta Tevlin for inviting me to give a talk at the Ontario Association of Physics Teachers.  The idea for this paper arose in preparing that talk (in particular, in rehearsing
 the argument that something goes both ways through an interferometer).  I am grateful to Robert Spekkens for numerous discussions and inspirational seminars on the subject of
 $\psi$-epistemic models, to Jonathan Barrett for carefully explaining the assumptions going into the PBR proof (the first two assumptions here came from that discussion), and to Christopher Fuchs for discussions on Qbism.  Last, but certainly not least, I am very grateful to Matthew Leifer for pointing out that the toy model of Spekkens violate the ontic indifference assumption and, further, for pointing out that the interferometer version of this toy model due to Martin and Spekkens illustrates how a local violation of the restricted ontic indifference assumption is possible in a field ontology.  
@@ -567,7 +572,7 @@ Montina Markovianicity).  This represents, perhaps, the most exciting avenue of 
 interpretation.  ....  Reconcile with qbism of Fuchs?? If two people can believe in different pure states for the same situation how does this play out here?
 
 
-Let us assume that there is a unique distribution over ontic states associated with any given pure state (though it is possible for a given pure state to be consistent with more than one distribution over ontic states if the available measurements cannot distinguish between these two distributions).  Hidden variable models that violate the ontic indifference assumption must have the property that, when we perform a transformation that leaves a pure state, $|0\rangle$, unchanged, the ontic states in the support of that state are shuffled (at least for one such case).  We require that this shuffling of ontic states leaves the distribution associated with $|0\rangle$ unchanged (by the above assumption).  One way to implement such shuffling is the following. First, for each state, $|\psi\rangle$ we write the set $\Lambda$ as a cartesian product $\Lambda=\Lambda^s_{|\psi\rangle} \times \Lambda^i_{|\psi\rangle}$ of the hidden variables (here $s$ denotes \lq\lq sensitive" and $i$ denotes \lq\lq indifferent").  We we will put $\lambda = (\mu, \nu)$ where $\mu\in \Lambda^s_{|\psi\rangle}$ and $\nu \in \Lambda^i_{|\psi\rangle}$.  Then a form of distribution that is consistent with the above requirements is
+Let us assume that there is a unique distribution over ontic states associated with any given pure state (though it is possible for a given pure state to be consistent with more than one distribution over ontic states if the available measurements cannot distinguish between these two distributions).  Hidden variable models that violate the ontic indifference assumption must have the property that, when we perform a transformation that leaves a pure state, $|0\rangle$, unchanged, the ontic states in the support of that state are shuffled (at least for one such case).  We require that this shuffling of ontic states leaves the distribution associated with $|0\rangle$ unchanged (by the above assumption).  One way to implement such shuffling is the following. First, for each state, $|\psi\rangle$ we write the set $\Lambda$ as a cartesian product $\Lambda=\Lambda^s_{|\psi\rangle} \times \Lambda^i_{|\psi\rangle}$ of the hidden variables (here $s$ denotes \lq\lq sensitive'' and $i$ denotes \lq\lq indifferent'').  We we will put $\lambda = (\mu, \nu)$ where $\mu\in \Lambda^s_{|\psi\rangle}$ and $\nu \in \Lambda^i_{|\psi\rangle}$.  Then a form of distribution that is consistent with the above requirements is
 \begin{equation}
 f_{|\psi\rangle}(\mu, \nu) = g(\mu) h_{|\psi\rangle}(\nu)
 \end{equation}
