--- a/helpers/fixarxiv-libtertine.tex
+++ b/helpers/fixarxiv-libtertine.tex
@@ -7,10 +7,12 @@
 %\usepackage[varqu,varl]{zi4}
 \usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[libertine]{newtxmath}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/fix-underbrace.tex}
