--- a/1205.1439/psionticproof2.tex
+++ b/1205.1439/psionticproof2.tex
@@ -33,7 +33,7 @@
 \pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-%\input{../helpers/cmrsum}
+\input{../helpers/cmrsum}
 %\input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
