--- a/helpers/fixarxiv-libtertine.tex
+++ b/helpers/fixarxiv-libtertine.tex
@@ -16,6 +16,7 @@
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/fix-underbrace.tex}
+\input{../helpers/cmrsum}
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
